// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input renders 1`] = `
<div
  class="column"
>
  <div
    class="bottomMargin-2"
  >
    <div
      class="row containsTooltip"
    >
      <label
        class="resetLabel label"
        for="the-input"
      >
        <span
          class="rightMargin-2"
        >
          <span
            class="medium boldFont color"
          >
            The input
          </span>
        </span>
      </label>
    </div>
  </div>
  <div
    class="horizontalPadding-3 default"
    data-testid="inputWrapper"
  >
    <div
      class="row sizing"
    >
      <div
        class="rightMargin-3 fullWidth"
      >
        <input
          aria-invalid="false"
          class="input"
          id="the-input"
          type="text"
          value=""
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Input renders with a feedback state and icon 1`] = `
<div
  class="column"
>
  <div
    class="bottomMargin-2"
  >
    <div
      class="row containsTooltip"
    >
      <label
        class="resetLabel label"
        for="the-input"
      >
        <span
          class="rightMargin-2"
        >
          <span
            class="medium boldFont color"
          >
            The input
          </span>
        </span>
      </label>
    </div>
  </div>
  <div
    class="horizontalPadding-3 error"
    data-testid="inputWrapper"
  >
    <div
      class="row sizing"
    >
      <div
        class="rightMargin-3 fullWidth"
      >
        <input
          aria-invalid="true"
          class="input"
          id="the-input"
          type="text"
          value=""
        />
      </div>
      <div
        style="transition:opacity 100ms ease-in-out;opacity:1"
      >
        <div>
          <i
            aria-label="The value of this input field is invalid."
            class="iconExclamationPointCircle error size16"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;
